# SimpleProject

./: CMakeLists.txt
SimpleProject/: CMakeLists.txt  prime.cpp  prime.h
Test/: CMakeLists.txt  primetest.cpp
primelib/: CMakeLists.txt  primelib.cpp  primelib.h
